@@ -1,12 +1,12 @@
 package com.base.rest.utils;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 
 import com.base.rest.dtos.BaseDTO;
 import com.base.rest.dtos.ResultTableDTO;
+import com.base.rest.dtos.SelectDTO;
 import com.base.rest.entities.BaseEntity;
 import com.googlecode.jmapper.JMapper;
 
@@ -16,28 +16,24 @@ public class Converter <O, D> {
 
 	public Converter(Class<O> origen, Class<D> destino) {
 		super();
-		Class<O> o = origen;
-		Class<D> d = destino;
-		mapper = new JMapper<>(d, o);
+		mapper = new JMapper<>(destino, origen);
 	}
 
 	// Para mapeo entre clases.
 	@SuppressWarnings("unchecked")
 	public ResultTableDTO convertToResultTableDTO(Page<BaseEntity> page) {
-		return new ResultTableDTO((List<BaseDTO>) page.getContent().stream().map(temp-> mapper.getDestination((O) temp))
-                .collect(Collectors.toList()), page.getTotalElements());
+		return new ResultTableDTO((List<BaseDTO>) page.getContent().stream()
+				.map(temp-> mapper.getDestination((O) temp)).toList(), page.getTotalElements());
     }
 	
 	@SuppressWarnings("unchecked")
-	public List<? extends BaseDTO> convertListToSelectDTO(List<? extends BaseEntity> lista) {
-		return (List<BaseDTO>) lista.stream().map(temp-> mapper.getDestination((O) temp))
-                .collect(Collectors.toList());
+	public List<SelectDTO> convertListToSelectDTO(List<? extends BaseEntity> lista) {
+		return (List<SelectDTO>) lista.stream().map(temp-> mapper.getDestination((O) temp)).toList();
     }
 	
 	@SuppressWarnings("unchecked")
-	public List<? extends BaseDTO> convertToListDTO(List<? extends BaseEntity> lista) {
-		return (List<BaseDTO>) lista.stream().map(temp-> mapper.getDestination((O) temp))
-                .collect(Collectors.toList());
+	public List<BaseDTO> convertToListDTO(List<? extends BaseEntity> lista) {
+		return (List<BaseDTO>) lista.stream().map(temp-> mapper.getDestination((O) temp)).toList();
     }
 	
 	@SuppressWarnings("unchecked")
